<resources>
    <string name="app_name">Gabriel Robocall Blocker</string>
    <string name="titleId">B95FB</string>
    <string name="logo">Logo</string>
    <string name="on_boarding_introduction_title">Welcome to Gabriel Robocall Blocker!</string>
    <string name="on_boarding_introduction_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna odio, euismod nec tempus vel, imperdiet ut mauris. Quisque dignissim sem non volutpat malesuada.</string>
    <string name="on_boarding_phone_title">Enter your phone number</string>
    <string name="on_boarding_phone_hint">Phone</string>
    <string name="on_boarding_code_hint">Code</string>
    <string name="on_boarding_phone_description">Please enter your phone number. This should be your primary carrier number.</string>
    <string name="on_boarding_code_title">Please confirm the 6 digit passcode</string>
    <string name="on_boarding_code_description">We sent you a verification code to %s. Please enter the code above.</string>
    <string name="on_boarding_tos_title">Terms of Service</string>
    <string name="on_boarding_privacy_title">Privacy Policy</string>
    <string name="on_boarding_tos_description">By clicking \"Accept\" below, you agree to the terms of service linked below and that Gabriel may send automated informational SMS messages to the phone number associated with your account. Message and data rates may apply.</string>
    <string name="on_boarding_view_tos">View Terms of Service</string>
    <string name="on_boarding_view_privacy_policy">View Privacy Policy</string>
    <string name="setup_start_title">Alright, we\'re set with the legal stuff.</string>
    <string name="setup_start_description1">Now, Gabriel just needs a couple more things in order to properly block those annoying spam calls and texts.</string>
    <string name="setup_start_description2">Just follow the instructions on the next couple of dialog boxes in order to give Gabriel the permission to do so.</string>
    <string name="setup_gps_permission_title">Use location service?</string>
    <string name="setup_gps_permission_description">In order for Gabriel to comply with state laws, and function properly, location services are recommended. You may disable this anytime.</string>
    <string name="setup_contacts_permission_title">Allow access to contacts?</string>
    <string name="setup_contacts_permission_description">Allow Gabriel to read contacts to whitelist and show contact information.</string>
    <string name="setup_audio_permission_title">Allow access to device audio?</string>
    <string name="setup_audio_permission_description">Allow Gabriel interact with device audio.</string>
    <string name="setup_logs_permission_title">Allow access to phone logs?</string>
    <string name="setup_logs_permission_description">Allow Gabriel to read call log to mark spam calls.</string>
    <string name="setup_phone_state_permission_title">Allow read phone state?</string>
    <string name="setup_phone_state_permission_description">Allow Gabriel to detect and filter spam calls.</string>
    <string name="setup_default_dialer_title">Default dialer</string>
    <string name="setup_default_dialer_description">Default dialer is needed for Gabriel to function properly.</string>
    <string name="setup_subscription_title">Here\'s the plan</string>
    <string name="setup_subscription_subtitle">$1.99 per month</string>
    <string name="setup_subscription_description">Free for 14 days</string>
    <string name="setup_subscription_sub1"><![CDATA[Advanced blocking & filtering]]></string>
    <string name="setup_subscription_desc1">Stop being bombarded with spam and robocalls.</string>
    <string name="setup_subscription_sub2"><![CDATA[Powered & rewarded by the network]]></string>
    <string name="setup_subscription_desc2">Our users power the network to update the spam database in real time, while getting rewarded in the process!</string>
    <string name="setup_subscription_sub3">No commitment</string>
    <string name="setup_subscription_desc3">No long term contract. Cancel anytime.</string>
    <string name="setup_permission_denied_title">Looks like you\'re having some trust issues.</string>
    <string name="setup_permission_denied_description">Gabriel needs the proper permissions in order to function and block those annoying spam calls and texts.</string>
    <string name="setup_permission_denied_additional_description">If you feel you\'ve reached this screen by accident , or you\'re cool with giving it another go, press continue.</string>
    <string name="setup_permission_denied_additional2_description">If not, we understand and wish you the best!</string>
    <string name="get_started">Get started</string>
    <string name="cont">Continue</string>
    <string name="accept">Accept</string>
    <string name="grant_permission">Grant permission</string>
    <string name="set_as_default">Set as default</string>
    <string name="call_input_hint">Call…</string>
    <string name="dialer_dial">Dial</string>
    <string name="dialer_log">History</string>
    <string name="dialer_favorites">Favorites</string>
    <string name="report">Report</string>
    <string name="decline">Decline</string>
    <string name="mute">Mute</string>
    <string name="keypad">Keypad</string>
    <string name="speaker">Speaker</string>
    <string name="add_call">Add call</string>
    <string name="video">Video</string>
    <string name="end_call">End call</string>
    <string name="call_likely_spam">Likely SPAM</string>
    <string name="call_not_spam">Not SPAM</string>
    <string name="call_confirmed_spam">Confirmed SPAM</string>
    <string name="dashboard_log">Call log</string>
    <string name="dashboard_search">Search</string>
    <string name="dashboard_settings">Settings</string>
    <string name="settings_data_usage_description">This allows Gabriel to synchronize your app to a blockchain database on your phone. Your data belongs to you and is not shared.</string>
    <string name="search_search">Search</string>
    <string name="search_search_description">Lookup a phone number to view more info and report.</string>
    <string name="search_phone_hint">Phone</string>
    <string name="search_hint">Search</string>
    <string name="search_whitelist">Whitelist</string>
    <string name="search_whitelist_description">Add numbers so Gabriel knows they are OK to ring your phone.</string>
    <string name="search_add_contacts">Add Contacts</string>
    <string name="search_phone_contacts">Phone Contacts</string>
    <string name="search_blacklist">Blacklist</string>
    <string name="search_blacklist_description">Numbers you\'ve reported or manually added are here.</string>
    <string name="search_blacklist_button">View Blacklist</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="search_invite_friends_description">Invite friends to join and give them three months of free access. For every friend that invites and gets another friend to join, Gabriel will deposit $1.99 into your account.</string>
    <string name="search_invite_friends_button">Invite Friends</string>
    <string name="search_view_whitelist">View Whitelist</string>
    <string name="contact_counter">(%d)</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="added_to_whitelist">Number added to whitelist</string>
    <string name="exists_on_whitelist">Number already on whitelist</string>
    <string name="removed_from_whitelist">Number removed from whitelist</string>
    <string name="not_on_whitelist">Number not on whitelist</string>
    <string name="added_to_blacklist">Number added to blacklist</string>
    <string name="exists_on_blacklist">Number already on blacklist</string>
    <string name="removed_from_blacklist">Number removed from blacklist</string>
    <string name="not_on_blacklist">Number not on blacklist</string>
    <string name="dnc_email_description">Your email address MUST be correct to process your registration. If you do not receive the verification email within a few minutes, please check your spam filter or junk email folder.</string>
    <string name="email">E-mail</string>
    <string name="search_description">Indicating a number is safe means it\'s a trusted caller, while an unsafe number would refer to a scam or untrusted robocaller.</string>
    <string name="search_votes">Current Votes:\nSafe %d Unsafe: %d</string>
    <string name="search_question">Is this number safe or unsafe?</string>
    <string name="unsafe">Unsafe</string>
    <string name="safe">Safe</string>
    <string name="dnc_description">Gabriel can register your phone with the National Do Not Call Registry. Please enter your phone number and email address below to register.</string>
    <string name="dnc_title">Do Not Call Registry</string>
    <string name="dnc_title2">Register Your Phone</string>
    <string name="dnc_phone_hint">Phone</string>
    <string name="dnc_email_hint">Email Address</string>
    <string name="dnc_register">Register</string>
    <string name="dnc_registration_completed">Registration with DNC completed. Check email.</string>
    <string name="dnc_registration_failed">DNC registration failed.</string>
    <string name="contacts">Contacts</string>
    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>
    <string name="share_your_link">Share Your Link</string>
    <string name="text">Text</string>
    <string name="share_text">Text</string>
    <string name="share_fb">FB Share</string>
    <string name="share_more">More</string>
    <string name="share_copy_link">Copy Link</string>
    <string name="invite">INVITE</string>
    <string name="one"><b>1</b>\n</string>
    <string name="two"><b>2</b>\nABC</string>
    <string name="three"><b>3</b>\nDEF</string>
    <string name="four">4\nGHI</string>
    <string name="five">5\nJKL</string>
    <string name="six">6\nMNO</string>
    <string name="seven">7\nPQRS</string>
    <string name="eight">8\nTUV</string>
    <string name="nine">9\nWXYZ</string>
    <string name="zero">0\n+</string>
    <string name="star">*\n(P)</string>
    <string name="hash">#\n(W)</string>
    <string name="join_swarm_title">Join Swarm</string>
    <string name="join_swarm_description">Connect to a swarm and collaborate with other users to teach Gabriel how to detect future scams. Earn crypto currency and cash prizes along the way.</string>
    <string name="join_swarm">Join Swarm</string>
    <string name="available_swarms">Available Swarms: 112</string>
    <string name="swarm_title">Swarm</string>
    <string name="users_in_swarm">Users in swarm: 10</string>
    <string name="awaiting_response">Awaiting response: 2</string>
    <string name="cancel">CANCEL</string>
    <string name="how_to_play">How To Play</string>
    <string name="warning_message">WARNING: The information presented for analysis may contain text, audio, video or images that are considered offensive and do not represent the views of Forward Edge-AI, Inc. The content is presented in its original format for the sole purpose of helping to train the Artificial Intelligence engine on how to detect scams. Use of the swarm mechanism is not intended for users under 18.</string>
    <string name="i_understand">I UNDERSTAND</string>
    <string name="EXIT">EXIT</string>
    <string name="IRSSCAM">IRS Scam</string>
    <string name="CONTINUE">Continue</string>
    <string name="consensus">What is your consensus?</string>
    <string name="BANKSCAM">Bank Account Scam</string>
    <string name="WARNING_TITLE">WARNING</string>
    <string name="SWARMROUND">Swarm Round 1 of 4</string>
    <string name="CONSENSUS">Consensus</string>
    <string name="SYNCCONTACTS">Sync Contacts</string>
    <string name="ALLOW">ALLOW</string>
    <string name="SYNCCONTACTS_DES">Allow Gabriel to access your contacts?</string>
</resources>