<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient_primary">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_big_green_down"
            android:paddingBottom="@dimen/margin_70">

            <TextView
                style="@style/title_white_h5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_50"
                android:layout_marginLeft="@dimen/button_margin_30"
                android:layout_marginBottom="@dimen/default_spacing_20"
                android:shadowColor="@color/secondary_color_400"
                android:shadowRadius="5"
                android:textSize="24dp"
                android:shadowDy="5"
                android:shadowDx="0"
                android:text="@string/swarm_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_spacing_20"
                android:padding="@dimen/default_spacing_20"
                android:layout_marginLeft="@dimen/image_icon_padding_15"
                android:layout_marginRight="@dimen/image_icon_padding_15"
                android:background="@drawable/empty_rounded_border">

                <TextView
                    android:id="@+id/think"
                    style="@style/body_white_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="What do you think the most popular consensus will be?"/>
                <EditText
                    android:id="@+id/et_irs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing_10"
                    style="@style/body_white_1"
                    android:layout_below="@id/think"
                    android:padding="@dimen/default_spacing_10"
                    android:background="@drawable/et_white"
                    android:text="@string/IRSSCAM"/>

                <TextView
                    android:id="@+id/tv_consensus"
                    style="@style/body_white_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin_20"
                    android:layout_below="@id/et_irs"
                    android:text="@string/consensus"/>
                <EditText
                    android:id="@+id/et_consensus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing_10"
                    style="@style/body_white_1"
                    android:layout_below="@id/tv_consensus"
                    android:padding="@dimen/default_spacing_10"
                    android:background="@drawable/et_white"
                    android:text="@string/BANKSCAM"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_continue"
                style="@style/button_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_30"
                android:layout_marginRight="@dimen/button_margin_30"
                android:text="@string/CONTINUE" />

            <TextView
                android:id="@+id/usersInSwarmsText"
                style="@style/body_white_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_20"
                android:layout_marginLeft="@dimen/button_margin_30"
                android:layout_marginRight="@dimen/button_margin_20"
                android:text="@string/users_in_swarm"/>

            <TextView
                android:id="@+id/awaitingResponseText"
                style="@style/body_white_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_30"
                android:layout_marginRight="@dimen/button_margin_20"
                android:text="@string/awaiting_response"/>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_drawable"/>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/bottomapppbartint"
        app:fabCradleDiameter="70dp"
        app:hideOnScroll="false">

        <LinearLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icons8_menu_48"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/settingButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_dial"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/teamButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icons8_people_48"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"/>

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icons8_search_24"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"/>

        </LinearLayout>


    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text_color_white_100"
        app:srcCompat="@drawable/icon_chevron_down"
        app:layout_anchor="@id/bar"/>

<!--    <FrameLayout-->
<!--        android:id="@+id/container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
<!--    </FrameLayout>-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>