<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient_primary">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_big_green_down"
            android:paddingBottom="@dimen/margin_70">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_swarm_title"
                style="@style/title_white_h5"
                android:layout_marginTop="@dimen/button_margin_50"
                android:layout_marginLeft="@dimen/button_margin_40"
                android:textSize="20sp"
                android:layout_marginRight="@dimen/button_margin_40"
                android:fontFamily="@font/futura_bold"
                android:shadowColor="@color/secondary_color_400"
                android:shadowRadius="5"
                android:shadowDy="5"
                android:shadowDx="0"
                />

            <TextView
                android:id="@+id/descriptionText"
                style="@style/body_white_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_20"
                android:layout_marginLeft="@dimen/button_margin_40"
                android:layout_marginRight="@dimen/button_margin_40"
                android:layout_below="@id/titleText"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/default_spacing_20"
                android:text="@string/join_swarm_description"/>

            <Button
                android:id="@+id/howToPlayButton"
                style="@style/button_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_50"
                android:layout_marginRight="@dimen/button_margin_50"
                android:layout_above="@id/joinSwarmButton"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/default_spacing_20"
                android:text="@string/how_to_play" />

            <Button
                android:id="@+id/joinSwarmButton"
                style="@style/button_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_50"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="16sp"
                android:layout_marginRight="@dimen/button_margin_50"
                android:layout_above="@id/availableSwarmsText"
                android:layout_marginBottom="@dimen/default_spacing_20"
                android:text="@string/join_swarm" />

            <TextView
                android:id="@+id/availableSwarmsText"
                style="@style/body_white_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_40"
                android:layout_marginRight="@dimen/button_margin_40"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="12sp"
                android:layout_marginBottom="@dimen/button_margin_30"
                android:text="@string/available_swarms"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_drawable"/>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/bottomapppbartint"
        app:fabCradleDiameter="70dp"
        app:hideOnScroll="false">

        <LinearLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icons8_menu_48"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/settingButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_dial"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/teamButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icons8_people_48"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"/>

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icons8_search_24"
                android:padding="@dimen/image_icon_padding_10"
                android:scaleType="fitCenter"
                android:clickable="false"/>

        </LinearLayout>


    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text_color_white_100"
        app:srcCompat="@drawable/icon_chevron_down"
        app:layout_anchor="@id/bar"/>

<!--    <FrameLayout-->
<!--        android:id="@+id/container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
<!--    </FrameLayout>-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>